--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-donut-chart": "^1.3.3",
     "react-router-dom": "^6.4.4",
