--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "chart.js": "^4.1.2",
-    "firebase": "^9.15.0",
+    "firebase": "^10.12.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-donut-chart": "^1.3.3",
     "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-svg": "^15.1.21",
     "web-vitals": "^2.1.4"
   },
